logs/dag_id=windturbine/run_id=manual__2024-03-08T09:19:26.919732+00:00/task_id=group_databse.insert_data/attempt=2.log
[2024-03-08T09:19:54.790+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: windturbine.group_databse.insert_data manual__2024-03-08T09:19:26.919732+00:00 [queued]>
[2024-03-08T09:19:54.823+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: windturbine.group_databse.insert_data manual__2024-03-08T09:19:26.919732+00:00 [queued]>
[2024-03-08T09:19:54.823+0000] {taskinstance.py:1279} INFO - 
--------------------------------------------------------------------------------
[2024-03-08T09:19:54.823+0000] {taskinstance.py:1280} INFO - Starting attempt 2 of 2
[2024-03-08T09:19:54.824+0000] {taskinstance.py:1281} INFO - 
--------------------------------------------------------------------------------
[2024-03-08T09:19:54.858+0000] {taskinstance.py:1300} INFO - Executing <Task(PostgresOperator): group_databse.insert_data> on 2024-03-08 09:19:26.919732+00:00
[2024-03-08T09:19:54.867+0000] {standard_task_runner.py:55} INFO - Started process 98 to run task
[2024-03-08T09:19:54.871+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'windturbine', 'group_databse.insert_data', 'manual__2024-03-08T09:19:26.919732+00:00', '--job-id', '360', '--raw', '--subdir', 'DAGS_FOLDER/windturbin.py', '--cfg-path', '/tmp/tmpqzxc1g43']
[2024-03-08T09:19:54.872+0000] {standard_task_runner.py:83} INFO - Job 360: Subtask group_databse.insert_data
[2024-03-08T09:19:54.895+0000] {warnings.py:110} WARNING - /home/***/.local/lib/python3.7/site-packages/***/settings.py:249: DeprecationWarning: The sql_alchemy_conn option in [core] has been moved to the sql_alchemy_conn option in [database] - the old setting has been used, but please update your config.
  SQL_ALCHEMY_CONN = conf.get("database", "SQL_ALCHEMY_CONN")

[2024-03-08T09:19:55.048+0000] {task_command.py:388} INFO - Running <TaskInstance: windturbine.group_databse.insert_data manual__2024-03-08T09:19:26.919732+00:00 [running]> on host 574a12f58141
[2024-03-08T09:19:55.280+0000] {taskinstance.py:1509} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_EMAIL=jezandre_tiago@hotmail.com
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=windturbine
AIRFLOW_CTX_TASK_ID=group_databse.insert_data
AIRFLOW_CTX_EXECUTION_DATE=2024-03-08T09:19:26.919732+00:00
AIRFLOW_CTX_TRY_NUMBER=2
AIRFLOW_CTX_DAG_RUN_ID=manual__2024-03-08T09:19:26.919732+00:00
[2024-03-08T09:19:55.282+0000] {sql.py:254} INFO - Executing: 
    INSERT INTO sensors (
        idtemp,
        powerfactor,
        hydraulicpressure,
        temperature,
        timestamp
        )
        VALUES(
        %s,
        %s,
        %s,
        %s,
        %s,
        );
[2024-03-08T09:19:55.308+0000] {base.py:73} INFO - Using connection ID 'postgres' for task execution.
[2024-03-08T09:19:56.006+0000] {base.py:73} INFO - Using connection ID 'postgres' for task execution.
[2024-03-08T09:19:56.015+0000] {sql.py:375} INFO - Running statement: 
    INSERT INTO sensors (
        idtemp,
        powerfactor,
        hydraulicpressure,
        temperature,
        timestamp
        )
        VALUES(
        %s,
        %s,
        %s,
        %s,
        %s,
        );, parameters: ('{{ti.xcom_pull(task_ids="get_data",key="idtemp")}}', '{{ti.xcom_pull(task_ids="get_data",key="powerfactor")}}', '{{ti.xcom_pull(task_ids="get_data",key="hydraulicpressure")}}', '{{ti.xcom_pull(task_ids="get_data",key="temperature")}}', '{{ti.xcom_pull(task_ids="get_data",key="timestamp")}}')
[2024-03-08T09:19:56.019+0000] {taskinstance.py:1768} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 378, in _run_command
    cur.execute(sql_statement, parameters)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 15:         );
                 ^

[2024-03-08T09:19:56.041+0000] {taskinstance.py:1323} INFO - Marking task as FAILED. dag_id=windturbine, task_id=group_databse.insert_data, execution_date=20240308T091926, start_date=20240308T091954, end_date=20240308T091956
[2024-03-08T09:19:56.073+0000] {warnings.py:110} WARNING - /home/***/.local/lib/python3.7/site-packages/***/utils/email.py:152: RemovedInAirflow3Warning: Fetching SMTP credentials from configuration variables will be deprecated in a future release. Please set credentials using a connection instead.
  send_mime_email(e_from=mail_from, e_to=recipients, mime_msg=msg, conn_id=conn_id, dryrun=dryrun)

[2024-03-08T09:19:56.074+0000] {email.py:268} INFO - Email alerting: attempt 1
[2024-03-08T09:19:58.498+0000] {email.py:280} INFO - Sent an alert email to ['jezandre_tiago@hotmail.com']
[2024-03-08T09:20:01.362+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 360 for task group_databse.insert_data (syntax error at or near ")"
LINE 15:         );
                 ^
; 98)
[2024-03-08T09:20:01.431+0000] {local_task_job.py:208} INFO - Task exited with return code 1
[2024-03-08T09:20:01.470+0000] {taskinstance.py:2578} INFO - 0 downstream tasks scheduled from follow-on schedule check
